--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,11 +1,11 @@
 .post-container:first-child {
-  margin-top: 250px;
+  margin-top: 330px;
 }
 
 .post-container {
   width: 100%;
-  height: calc(100vh - 80px);
-  scroll-snap-align: start;
+  height: calc(100vh - 300px);
+  margin-top: 100px;
 }
 
 .img-container {
@@ -29,29 +29,30 @@
   z-index: 2;
 }
 
-.profile-like-container {
+.profile-container {
   width: 721px;
-  height: 150px;
   margin: 45px auto 70px auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.profile-like-container img {
+.profile-left-container {
+  display: flex;
+  align-items: center;
+}
+
+.profile-left-container img {
   width: 115px;
   height: 115px;
   border-radius: 50%;
 }
 
-.profile-like-container p {
+.followers p {
   margin-left: 20px;
   font-size: 25px;
 }
-.profile-right-container {
-  display: flex;
-  align-items: center;
-}
+
 .follow-button {
   height: 80px;
   width: 200px;
@@ -74,7 +75,7 @@
   height: 200px;
   background-color: #c4c4c4;
   opacity: 0.3;
-  border-radius: 50px;
+  border-radius: 30px;
   padding: 30px;
   margin: auto;
 }
@@ -90,6 +91,7 @@
   bottom: 15px;
   width: 100%;
   height: 115px;
+  background-color: transparent;
 }
 
 .Description {
@@ -109,4 +111,96 @@ button {
   cursor: pointer;
   margin-left: calc(50% - (115px / 2));
   z-index: 10;
+}
+
+@media screen and (min-width: 1000px) {
+  .post-container:first-child {
+    margin-top: 100px;
+  }
+  .post-container {
+    height: calc(100vh - 200px);
+    margin-top: 200px;
+  }
+  .img-post {
+    width: 500px;
+  }
+  .img-container {
+    margin: auto;
+    width: 500px;
+    min-height: 250px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+  }
+
+  .img-post {
+    width: 100%;
+    max-height: 900px;
+    object-fit: contain;
+    border-radius: 10%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: block;
+    margin: 5px auto;
+    z-index: 2;
+  }
+
+  .profile-container {
+    width: 500px;
+    margin: 20px auto;
+  }
+
+  .profile-container img {
+    width: 70px;
+    height: 70px;
+  }
+
+  .followers p {
+    margin-left: 20px;
+    font-size: 18px;
+  }
+
+  .follow-button {
+    height: 40px;
+    width: 100px;
+    background-color: #ffb600;
+    right: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 40px;
+  }
+  .follow-button p {
+    font-size: 13px;
+  }
+
+  .biography-section {
+    width: 450px;
+    height: 80px;
+    background-color: #c4c4c4;
+    opacity: 0.3;
+    padding: 30px;
+    margin: auto;
+  }
+
+  .biography-section p {
+    font-size: 20px;
+  }
+
+  .Description {
+    width: 500px;
+    margin: auto;
+    font-size: 17px;
+  }
+
+  .button-container {
+    bottom: 25px;
+    height: 50px;
+  }
+
+  button {
+    width: 70px;
+    height: 70px;
+    font-size: 50px;
+  }
 }
