--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -115,11 +115,15 @@ button {
 
 @media screen and (min-width: 1000px) {
   .post-container:first-child {
-    margin-top: 100px;
+    margin-top: 75px;
   }
   .post-container {
     height: calc(100vh - 200px);
     margin-top: 200px;
+  }
+
+  .post-container:last-child {
+    margin-bottom: 100px;
   }
   .img-post {
     width: 500px;
@@ -176,7 +180,7 @@ button {
 
   .biography-section {
     width: 450px;
-    height: 80px;
+    height: 65px;
     background-color: #c4c4c4;
     opacity: 0.3;
     padding: 30px;
