--- a/assets/styles/like-animation.css
+++ b/assets/styles/like-animation.css
@@ -5,29 +5,26 @@
 }
 .like-img {
   display: inline-block;
-  margin-top: -15px;
-  margin-left: 40px;
+  margin-top: -20px;
+  padding-left: 40px;
 }
 .hover:hover {
   margin-top: -8px;
   transition-duration: 100ms;
   cursor: pointer;
 }
-.like-img img:first-child {
+.like-heart-img {
   position: absolute;
-  width: 35px;
+  width: 30px;
   background-color: transparent;
-  margin-left: 25px;
-  margin-top: 20px;
-}
-
-.not-liked {
+  margin-left: 28px;
+  margin-top: 25px;
   opacity: 0.6;
 }
-
-.jakob {
+.like-heart-img-active {
   opacity: 1;
 }
+
 .bookmark-img {
   width: 85px;
   z-index: -1;
@@ -56,10 +53,17 @@
     width: 65px;
   }
 
-  .like-img img:first-child {
+  .like-heart-img {
     width: 25px;
-
-    margin-left: 20px;
+    margin-left: 21px;
     margin-top: 20px;
+  }
+
+  .not-liked {
+    opacity: 0.6;
+  }
+
+  .active {
+    opacity: 1;
   }
 }
