--- a/assets/styles/signup.css
+++ b/assets/styles/signup.css
@@ -18,3 +18,31 @@ img {
   width: 100px;
   margin: 50px;
 }
+
+@media screen and (min-width: 1000px) {
+  .log-in-cointainer p {
+    font-size: 20px;
+    margin-top: 20px;
+    opacity: 0.8;
+  }
+
+  .logo-log-in {
+    font-size: 180px;
+    margin-top: 0;
+  }
+
+  .btn {
+    width: 450px;
+    height: 80px;
+    font-size: 30px;
+  }
+  a {
+    display: inline-block;
+  }
+
+  img {
+    width: 50px;
+    margin: 50px;
+    position: absolute;
+  }
+}
