--- a/assets/styles/startscreen.css
+++ b/assets/styles/startscreen.css
@@ -63,3 +63,28 @@ input {
   box-shadow: 0px 10px 51px -17px rgba(0, 0, 0, 0.75);
   cursor: pointer;
 }
+
+@media screen and (min-width: 1000px) {
+  label {
+    font-size: 20px;
+  }
+  input[type="text"],
+  input[type="email"],
+  input[type="password"] {
+    font-size: 30px;
+  }
+
+  input {
+    width: 100%;
+    height: 60px;
+    margin: 20px auto;
+  }
+
+  .log-in-cointainer {
+    width: 500px;
+  }
+
+  .btn {
+    margin-top: 200px;
+  }
+}
