--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,5 +1,5 @@
 .post-container:first-child {
-  margin-top: 330px;
+  margin-top: 230px;
 }
 
 .post-container {
@@ -11,17 +11,19 @@
 .img-container {
   margin: auto;
   width: 721px;
-  min-height: 250px;
+  max-height: 550px;
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
+  z-index: 3;
+  overflow: hidden;
+  border-radius: 10%;
 }
 
 .img-post {
   width: 100%;
-  max-height: 900px;
+  height: auto;
   object-fit: contain;
-  border-radius: 10%;
   background-size: cover;
   background-repeat: no-repeat;
   display: block;
