--- a/assets/styles/profile/edit.css
+++ b/assets/styles/profile/edit.css
@@ -13,16 +13,30 @@
 .post-container:last-child {
   margin-bottom: 100px;
 }
-
-.post-container img {
+.img-container {
+  margin: auto;
   width: 100%;
-  max-height: 500px;
-  object-fit: contain;
+  max-height: 550px;
+  overflow: hidden;
   border-radius: 10%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.img-container img {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
   background-size: cover;
   background-repeat: no-repeat;
   display: block;
-  margin: 0 auto 80px auto;
+  margin: 5px auto;
+}
+.description {
+  font-size: 30px;
+  margin-left: 15px;
+  font-weight: 350;
 }
 
 a {
