--- a/assets/styles/profile/my-profile.css
+++ b/assets/styles/profile/my-profile.css
@@ -46,7 +46,7 @@
 }
 
 .post-container {
-  padding-top: 200px;
+  padding-top: 120px;
   margin: auto;
   width: 721px;
   height: 60vh;
@@ -56,15 +56,26 @@
   margin-bottom: 100px;
 }
 
-.post-container img {
-  width: 100%;
-  max-height: 500px;
-  object-fit: contain;
+.img-container {
+  margin: auto;
+  width: 721px;
+  max-height: 550px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  z-index: 3;
+  overflow: hidden;
   border-radius: 10%;
+}
+
+.img-container img {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
   background-size: cover;
   background-repeat: no-repeat;
   display: block;
-  margin: 0 auto 80px auto;
+  margin: 0 auto;
 }
 
 /* biography section */
@@ -86,8 +97,7 @@
 }
 
 .Description {
-  margin-left: 10px;
-  margin-bottom: 10px;
+  margin: 50px 5px 10px 5px;
   font-size: 30px;
 }
 
