--- a/assets/styles/profile/other-profile.css
+++ b/assets/styles/profile/other-profile.css
@@ -1,6 +1,5 @@
 .profile-container {
   width: 100%;
-
   padding-top: 70px;
 }
 
@@ -48,22 +47,32 @@
   padding-top: 150px;
   margin: auto;
   width: 721px;
-  height: 60vh;
+  height: auto;
 }
 
 .post-container:last-child {
   margin-bottom: 100px;
 }
 
-.post-container img {
+.img-container {
+  margin: auto;
   width: 100%;
-  max-height: 500px;
-  object-fit: contain;
+  max-height: 550px;
+  overflow: hidden;
   border-radius: 10%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.img-container img {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
   background-size: cover;
   background-repeat: no-repeat;
   display: block;
-  margin: 0 auto 80px auto;
+  margin: 5px auto;
 }
 
 /* biography section */
@@ -85,8 +94,7 @@
 }
 
 .Description {
-  margin-left: 10px;
-  margin-bottom: 10px;
+  margin: 20px 10px;
   font-size: 30px;
 }
 
@@ -106,4 +114,83 @@
   color: black;
   font-size: 30px;
   margin-left: -3px;
+}
+
+@media screen and (min-width: 1000px) {
+  .profil-information-container {
+    margin-top: -20px;
+    padding-top: 20px;
+  }
+
+  .profil-flex img {
+    width: 110px;
+    height: 110px;
+  }
+  .profile-username p {
+    font-size: 25px;
+  }
+
+  .profile-followers p {
+    font-size: 18px;
+  }
+
+  .images-container {
+    width: 100%;
+    height: 55vh;
+    margin-top: 130px;
+  }
+
+  .post-container {
+    padding-top: 150px;
+    margin: auto;
+    width: 450px;
+    height: 60vh;
+  }
+
+  .post-container:last-child {
+    margin-bottom: 100px;
+  }
+
+  .post-container img {
+    width: 100%;
+    max-height: 300px;
+    object-fit: contain;
+    border-radius: 10%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: block;
+    margin: 0 auto 40px auto;
+  }
+
+  /* biography section */
+
+  .biography-section {
+    width: 400px;
+    height: 50px;
+    background-color: #c4c4c4;
+    opacity: 0.3;
+    border-radius: 50px;
+    padding: 30px;
+    margin: auto;
+  }
+
+  .biography-section p {
+    background-color: #c4c4c4;
+    font-size: 20px;
+    display: inline-block;
+  }
+
+  .Description {
+    font-size: 18px;
+  }
+
+  .follow-button {
+    margin: 20px 30px 10px 30px;
+    height: 40px;
+    width: 110px;
+  }
+  .follow-button p {
+    font-size: 20px;
+    margin-left: -3px;
+  }
 }
