--- a/assets/styles/search.css
+++ b/assets/styles/search.css
@@ -68,15 +68,27 @@ select:focus {
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, 1fr) min-content;
   row-gap: 50px;
+  column-gap: 20px;
 }
 
 .image-container {
-  padding: 20px;
+  width: 90%;
+  height: 300px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  overflow: hidden;
+  border-radius: 50px;
+  margin: auto;
 }
 .image-container img {
   width: 100%;
-  height: 300px;
-  border-radius: 40px;
+  height: auto;
+  object-fit: contain;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: block;
   -webkit-box-shadow: 0px 0px 32px -9px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 0px 32px -9px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 32px -9px rgba(0, 0, 0, 0.75);
