--- a/assets/styles/profile/edit.css
+++ b/assets/styles/profile/edit.css
@@ -1,13 +1,12 @@
 .settings-container {
   width: 100%;
-  height: calc(100vh - 150px);
+  height: auto;
 }
 
 .post-container {
-  padding-top: 270px;
+  padding-top: 150px;
   margin: auto;
   width: 721px;
-  height: 60vh;
 }
 
 .post-container:last-child {
@@ -20,8 +19,8 @@
   overflow: hidden;
   border-radius: 10%;
   display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
+  justify-content: center;
+  align-items: center;
 }
 
 .img-container img {
@@ -102,14 +101,53 @@ input[type="file"] {
 }
 
 @media screen and (min-width: 1000px) {
-  .button-structure {
-    width: 500px;
-    height: 80px;
-    margin: 100px auto;
+  .post-container {
+    padding-top: 100px;
+    margin: auto;
+    width: 450px;
+    height: auto;
   }
 
-  .button-structure p {
+  .post-container:last-child {
+    margin-bottom: 100px;
+  }
+  .img-container {
+    margin: auto;
+    width: 100%;
+    max-height: 350px;
+  }
+
+  .description {
+    font-size: 20px;
+  }
+
+  .textarea-container {
+    margin: 30px auto 0 auto;
+    width: 450px;
+  }
+  .btn {
+    width: 100%;
+    height: 70px;
+    font-size: 20px;
+    border-radius: 50px;
+  }
+  .btn-change {
+    margin-top: 80px;
+  }
+
+  .btn-delete {
+    margin-top: 30px;
+  }
+
+  .link {
+    text-decoration: none;
+  }
+
+  .biography {
+    width: 100%;
+    height: 100px;
+    border-radius: 30px;
+    padding: 20px;
     font-size: 25px;
-    font-weight: 350;
   }
 }
