--- a/assets/styles/profile/my-profile.css
+++ b/assets/styles/profile/my-profile.css
@@ -16,11 +16,20 @@
   display: flex;
   justify-content: center;
 }
-.profil-flex img {
-  display: inline-block;
+
+.profile-img-container {
   border-radius: 50%;
   width: 230px;
   height: 230px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+.profile-img-container img {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
 }
 
 .profile-username .profile-followers {
@@ -41,7 +50,7 @@
 
 .images-container {
   width: 100%;
-  height: 55vh;
+  height: auto;
   margin-top: 40%;
 }
 
@@ -49,11 +58,11 @@
   padding-top: 120px;
   margin: auto;
   width: 721px;
-  height: 60vh;
+  height: auto;
 }
 
 .post-container:last-child {
-  margin-bottom: 100px;
+  margin-bottom: 250px;
 }
 
 .img-container {
@@ -61,8 +70,8 @@
   width: 721px;
   max-height: 550px;
   display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
+  justify-content: center;
+  align-items: center;
   z-index: 3;
   overflow: hidden;
   border-radius: 10%;
@@ -130,13 +139,13 @@ button {
 
   .profil-information-container {
     height: auto;
-    padding-top: 80px;
+    padding-top: 50px;
+  }
+  .profile-img-container {
+    width: 150px;
+    height: 150px;
   }
 
-  .profil-flex img {
-    width: 120px;
-    height: 120px;
-  }
   .profile-username p {
     font-size: 25px;
   }
@@ -150,28 +159,47 @@ button {
   }
 
   .post-container {
-    width: 550px;
+    padding-top: 210px;
+    width: 350px;
+  }
+
+  .img-container {
+    margin: auto;
+    width: 100%;
+    max-height: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 3;
+    overflow: hidden;
+    border-radius: 10%;
+  }
+
+  .img-container img {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: block;
+    margin: 0 auto;
   }
 
   .post-container:last-child {
-    margin-bottom: 100px;
-  }
-
-  .post-container img {
-    max-height: 500px;
-    width: 520px;
+    margin-bottom: 140px;
   }
 
   /* biography section */
 
   .biography-section {
-    width: 450px;
-    height: 80px;
-    background-color: #c4c4c4;
+    width: 300px;
+    height: 40px;
+    border-radius: 30px;
+    padding: 20px;
   }
 
   .biography-section p {
-    font-size: 20px;
+    font-size: 15px;
   }
 
   .Description {
@@ -184,8 +212,8 @@ button {
   }
 
   button {
-    font-size: 25px;
-    width: 90px;
-    height: 90px;
+    font-size: 20px;
+    width: 70px;
+    height: 70px;
   }
 }
