--- a/assets/styles/profile/other-profile.css
+++ b/assets/styles/profile/other-profile.css
@@ -122,10 +122,23 @@
     padding-top: 20px;
   }
 
-  .profil-flex img {
-    width: 110px;
-    height: 110px;
+  .post-container {
+    padding-top: 150px;
+    margin: auto;
+    width: 400px;
   }
+
+  .img-container {
+    margin: auto;
+    width: 100%;
+    max-height: 300px;
+  }
+
+  .img-container img {
+    width: 100%;
+    height: 100%;
+  }
+
   .profile-username p {
     font-size: 25px;
   }
@@ -140,43 +153,30 @@
     margin-top: 130px;
   }
 
-  .post-container {
-    padding-top: 150px;
-    margin: auto;
-    width: 450px;
-    height: 60vh;
-  }
-
   .post-container:last-child {
     margin-bottom: 100px;
   }
 
-  .post-container img {
-    width: 100%;
-    max-height: 300px;
-    object-fit: contain;
-    border-radius: 10%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: block;
-    margin: 0 auto 40px auto;
+  .profil-flex img {
+    width: 130px;
+    height: 130px;
   }
 
   /* biography section */
 
   .biography-section {
-    width: 400px;
-    height: 50px;
+    width: 330px;
+    height: 40px;
     background-color: #c4c4c4;
     opacity: 0.3;
-    border-radius: 50px;
+    border-radius: 40px;
     padding: 30px;
     margin: auto;
   }
 
   .biography-section p {
     background-color: #c4c4c4;
-    font-size: 20px;
+    font-size: 18px;
     display: inline-block;
   }
 
