--- a/assets/styles/search.css
+++ b/assets/styles/search.css
@@ -113,18 +113,8 @@ select:focus {
     font-size: 20px;
   }
 
-  input:focus,
-  textarea:focus,
-  select:focus {
-    outline: none;
-  }
-
   .result-container {
     width: 450px;
-  }
-
-  .result-user > * {
-    margin: 20px;
   }
 
   .result-user img {
@@ -136,23 +126,14 @@ select:focus {
     font-size: 20px;
   }
   .random-images-container {
-    margin-top: 50px;
-    width: 680px;
-    margin: auto;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr) min-content;
-    row-gap: 0px;
+    margin: 50px auto;
+    width: 650px;
+    max-height: 200px;
+    row-gap: 10px;
+    column-gap: 10px;
   }
 
   .image-container {
-    padding-top: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .image-container img {
-    width: 100%;
-    height: 200px;
-    border-radius: 40px;
+    max-height: 200px;
   }
 }
