--- a/assets/styles/upload.css
+++ b/assets/styles/upload.css
@@ -74,12 +74,12 @@ input[type="file"] {
 @media screen and (min-width: 1000px) {
   .upload-container {
     margin: auto;
-    margin-top: 100px;
+    margin-top: 60px;
   }
 
   .upload-img {
-    width: 500px;
-    height: 550px;
+    width: 400px;
+    height: 450px;
     margin-top: 30px;
   }
 
@@ -89,7 +89,7 @@ input[type="file"] {
 
   .textarea-container {
     margin: 50px auto 0 auto;
-    width: 500px;
+    width: 400px;
   }
   .description {
     font-size: 25px;
@@ -97,19 +97,20 @@ input[type="file"] {
   }
 
   .biography {
-    width: 500px;
-    height: 130px;
+    width: 100%;
+    height: 100px;
     padding: 20px;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: 200;
     margin: 0 auto;
     opacity: 0.5;
+    border-radius: 30px;
   }
 
   .btn {
-    width: 450px;
+    width: 100%;
     height: 80px;
     font-size: 30px;
-    margin: 80px auto 0 auto;
+    margin: 40px auto 0 auto;
   }
 }
