--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -125,7 +125,9 @@ button {
 .comment-button {
   background-color: #ffb600;
   color: #ffffff;
-  padding: 12.5px;
+  padding: 7px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   margin: 0 5px;
 }
@@ -149,6 +151,7 @@ button {
 }
 
 .textarea {
+
   position: relative;
   resize: none;
   background-color: #e9e9ed;
@@ -156,6 +159,7 @@ button {
   width: 100%;
   height: 70%;
   font-size: 20px;
+  line-height: 20px;
   color: #aeaeb3;
 }
 
